--- a/OlaAssignment/Base.lproj/Main.storyboard
+++ b/OlaAssignment/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,92 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="OlaAssignment" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ia0-UF-dNV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcome_screen" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="74t-BO-DnC">
+                                <rect key="frame" x="0.0" y="44" width="414" height="714"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aa4-6m-LEK">
+                                <rect key="frame" x="155.5" y="789" width="103.5" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="7tv-zD-0Nf"/>
+                                </constraints>
+                                <state key="normal" title="Next">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="6G8-Zd-rOp" kind="show" id="ehf-g6-fup"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Aa4-6m-LEK" firstAttribute="centerX" secondItem="ia0-UF-dNV" secondAttribute="centerX" id="0mC-Rc-hgX"/>
+                            <constraint firstItem="Avq-lK-ah8" firstAttribute="trailing" secondItem="74t-BO-DnC" secondAttribute="trailing" id="2Bf-Vq-NFY"/>
+                            <constraint firstItem="Avq-lK-ah8" firstAttribute="bottom" secondItem="Aa4-6m-LEK" secondAttribute="bottom" constant="33" id="9rO-zl-pXN"/>
+                            <constraint firstItem="Aa4-6m-LEK" firstAttribute="width" secondItem="74t-BO-DnC" secondAttribute="width" multiplier="0.25" id="N44-YP-92O"/>
+                            <constraint firstItem="Aa4-6m-LEK" firstAttribute="top" secondItem="74t-BO-DnC" secondAttribute="bottom" constant="31" id="U6Z-1c-FQY"/>
+                            <constraint firstItem="74t-BO-DnC" firstAttribute="leading" secondItem="Avq-lK-ah8" secondAttribute="leading" id="ZW2-RB-hph"/>
+                            <constraint firstItem="74t-BO-DnC" firstAttribute="top" secondItem="Avq-lK-ah8" secondAttribute="top" id="wau-Qb-pO4"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Avq-lK-ah8"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="133" y="115"/>
+        </scene>
+        <!--Ola Vehicle Main View Controller-->
+        <scene sceneID="v7T-cg-9Hr">
+            <objects>
+                <viewController storyboardIdentifier="OlaVehicleMainViewController" id="6G8-Zd-rOp" customClass="OlaVehicleMainViewController" customModule="OlaAssignment" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Z0o-cH-wKm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="8YT-FK-Mdg">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <connections>
+                                    <outlet property="delegate" destination="6G8-Zd-rOp" id="XbA-0m-I57"/>
+                                </connections>
+                            </mapView>
+                            <searchBar contentMode="redraw" placeholder="Search destination" translatesAutoresizingMaskIntoConstraints="NO" id="gQI-WC-UcF">
+                                <rect key="frame" x="20" y="20" width="374" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="dSk-uR-Sfw" firstAttribute="trailing" secondItem="8YT-FK-Mdg" secondAttribute="trailing" id="28P-C8-XLp"/>
+                            <constraint firstItem="8YT-FK-Mdg" firstAttribute="top" secondItem="Z0o-cH-wKm" secondAttribute="top" id="KI3-wE-pHI"/>
+                            <constraint firstItem="gQI-WC-UcF" firstAttribute="leading" secondItem="dSk-uR-Sfw" secondAttribute="leading" constant="20" id="MC1-Td-Ugo"/>
+                            <constraint firstItem="dSk-uR-Sfw" firstAttribute="trailing" secondItem="gQI-WC-UcF" secondAttribute="trailing" constant="20" id="Ohp-wD-Qgt"/>
+                            <constraint firstItem="8YT-FK-Mdg" firstAttribute="leading" secondItem="dSk-uR-Sfw" secondAttribute="leading" id="dIa-6f-hK1"/>
+                            <constraint firstItem="dSk-uR-Sfw" firstAttribute="bottom" secondItem="8YT-FK-Mdg" secondAttribute="bottom" id="gh8-h5-e3j"/>
+                            <constraint firstItem="gQI-WC-UcF" firstAttribute="top" secondItem="dSk-uR-Sfw" secondAttribute="top" constant="20" id="iPa-qY-vDY"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dSk-uR-Sfw"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Pcf-cR-mPa"/>
+                    <connections>
+                        <outlet property="mapView" destination="8YT-FK-Mdg" id="WCh-8b-dF7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LAT-AH-ZH9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="945" y="98"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="welcome_screen" width="612" height="792"/>
+    </resources>
 </document>
