--- a/OlaAssignment/Base.lproj/Main.storyboard
+++ b/OlaAssignment/Base.lproj/Main.storyboard
@@ -68,20 +68,56 @@
                                     <outlet property="delegate" destination="6G8-Zd-rOp" id="XbA-0m-I57"/>
                                 </connections>
                             </mapView>
-                            <searchBar contentMode="redraw" placeholder="Search destination" translatesAutoresizingMaskIntoConstraints="NO" id="gQI-WC-UcF">
-                                <rect key="frame" x="20" y="20" width="374" height="56"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3q1-Ky-EPE">
+                                <rect key="frame" x="348" y="15" width="46" height="45"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="i0B-sV-wpp"/>
+                                    <constraint firstAttribute="height" constant="45" id="lrn-lQ-WfN"/>
+                                </constraints>
+                                <color key="tintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" image="magnifyingglass" catalog="system"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SPK-og-WwP">
+                                <rect key="frame" x="20" y="15" width="46" height="45"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="Q70-jy-3kE"/>
+                                    <constraint firstAttribute="width" constant="46" id="ift-Ml-Csd"/>
+                                </constraints>
+                                <color key="tintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" image="person.fill" catalog="system"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book Rides" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wvc-C8-KGS">
+                                <rect key="frame" x="164" y="27" width="86" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="dSk-uR-Sfw" firstAttribute="trailing" secondItem="8YT-FK-Mdg" secondAttribute="trailing" id="28P-C8-XLp"/>
+                            <constraint firstItem="wvc-C8-KGS" firstAttribute="centerY" secondItem="3q1-Ky-EPE" secondAttribute="centerY" id="CmP-6L-CwU"/>
+                            <constraint firstItem="wvc-C8-KGS" firstAttribute="centerY" secondItem="SPK-og-WwP" secondAttribute="centerY" id="DKw-JD-Sjq"/>
+                            <constraint firstItem="dSk-uR-Sfw" firstAttribute="trailing" secondItem="3q1-Ky-EPE" secondAttribute="trailing" constant="20" id="JdU-uJ-YgU"/>
                             <constraint firstItem="8YT-FK-Mdg" firstAttribute="top" secondItem="Z0o-cH-wKm" secondAttribute="top" id="KI3-wE-pHI"/>
-                            <constraint firstItem="gQI-WC-UcF" firstAttribute="leading" secondItem="dSk-uR-Sfw" secondAttribute="leading" constant="20" id="MC1-Td-Ugo"/>
-                            <constraint firstItem="dSk-uR-Sfw" firstAttribute="trailing" secondItem="gQI-WC-UcF" secondAttribute="trailing" constant="20" id="Ohp-wD-Qgt"/>
+                            <constraint firstItem="SPK-og-WwP" firstAttribute="top" secondItem="dSk-uR-Sfw" secondAttribute="top" constant="15" id="KTb-VL-Ukr"/>
+                            <constraint firstItem="3q1-Ky-EPE" firstAttribute="top" secondItem="dSk-uR-Sfw" secondAttribute="top" constant="15" id="Vxm-6Z-HGz"/>
                             <constraint firstItem="8YT-FK-Mdg" firstAttribute="leading" secondItem="dSk-uR-Sfw" secondAttribute="leading" id="dIa-6f-hK1"/>
                             <constraint firstItem="dSk-uR-Sfw" firstAttribute="bottom" secondItem="8YT-FK-Mdg" secondAttribute="bottom" id="gh8-h5-e3j"/>
-                            <constraint firstItem="gQI-WC-UcF" firstAttribute="top" secondItem="dSk-uR-Sfw" secondAttribute="top" constant="20" id="iPa-qY-vDY"/>
+                            <constraint firstItem="wvc-C8-KGS" firstAttribute="centerX" secondItem="Z0o-cH-wKm" secondAttribute="centerX" id="gmU-aM-TN1"/>
+                            <constraint firstItem="SPK-og-WwP" firstAttribute="leading" secondItem="dSk-uR-Sfw" secondAttribute="leading" constant="20" id="toK-4F-ggW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dSk-uR-Sfw"/>
                     </view>
@@ -92,10 +128,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LAT-AH-ZH9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="945" y="98"/>
+            <point key="canvasLocation" x="944.92753623188412" y="97.767857142857139"/>
         </scene>
     </scenes>
     <resources>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="welcome_screen" width="612" height="792"/>
     </resources>
 </document>
